<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.forest</groupId>
	<artifactId>io.forest.openltabletdojo</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>openl</packaging>
	<name>OpenL Simple Project</name>
	<url>https://openl-tablets.org</url>
	<organization>
		<name>OpenL Tablets</name>
		<url>https://openl-tablets.org</url>
	</organization>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.openl.version>5.26.7</org.openl.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>


	<dependencies>


		<dependency>
			<groupId>org.openl.rules</groupId>
			<artifactId>org.openl.rules</artifactId>
			<version>${org.openl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openl.rules</groupId>
			<artifactId>org.openl.rules.project</artifactId>
			<version>${org.openl.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.20.0</version>
		</dependency>


		<!-- The dependency for runtime -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<!--
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.20.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.20.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-to-slf4j</artifactId>
			<version>2.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.7</version>
		</dependency>
		-->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.9.3</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
			</plugin>
			<plugin>
				<groupId>org.openl.rules</groupId>
				<artifactId>openl-maven-plugin</artifactId>
				<version>${org.openl.version}</version>
				<configuration>
					<argLine>
					    --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
					    --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
					</argLine>
				</configuration>
				<extensions>true</extensions>
			</plugin>
		</plugins>
	</build>
</project>
